--- a/src/App.css
+++ b/src/App.css
@@ -109,3 +109,18 @@ li{
   .me {
     border-radius: 50%;
   }
+  .projects {
+    display: grid;
+    grid-gap: 20px;
+    list-style-type: none;
+  }
+  .foot {
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #f5f5f5;
+    width: 100%;
+    padding: 20px 0;
+    text-align: center;
+  }
